correct spelling mistake

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                     <div class="experience-content">
                         <div class="experience-header">
                             <h3 class="experience-title">Backend Developer</h3>
-                            <div class="experience-company">Attivbits Pvt Ltd</div>
+                            <div class="experience-company">Atticbits Solutions Pvt Ltd</div>
                             <div class="experience-duration">03/2024 - Present</div>
                             <div class="experience-location">MP, India</div>
                         </div>
