--- a/index.html
+++ b/index.html
@@ -133,6 +133,16 @@
                             <div class="stat-label">Live Projects</div>
                         </div>
                     </div>
+                    <div class="about-actions">
+                        <a href="https://www.linkedin.com/in/pratikamore/" target="_blank" class="btn btn-primary">
+                            <i class="fab fa-linkedin"></i>
+                            Connect on LinkedIn
+                        </a>
+                        <a href="Pratik-Arjun-More-FlowCV-Resume-20240111 (1).pdf" download class="btn btn-secondary">
+                            <i class="fas fa-download"></i>
+                            Download Resume
+                        </a>
+                    </div>
                 </div>
                 <div class="about-image">
                     <div class="profile-card">
